# tavsin

./: .gitignore  Anchor.toml  FULL_LAUNCH_PLAN.md  LICENSE  PITCH.md  README.md  SECURITY.md  STRATEGY.md  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
app/: .env.example  next.config.ts  package-lock.json  package.json
app/public/: robots.txt
docs/: AUDIT_BRIEF.md  CONTENT_PACK.md  MAINNET_DEPLOY_NOW.md  MAINNET_LAUNCH_RUNBOOK.md  PITCH_DECK.md  PITCH_V2.md  PRELAUNCH_CHECKLIST.md  SECURITY_REVIEW_PREP.md  STRATEGY.md  TELEGRAM_BOT.md  WEEK2_VIDEO_SCRIPT.md
examples/demo-agent/: README.md  package-lock.json  package.json  tsconfig.json
examples/keeper/: README.md  (+1 more)
mcp/: README.md  claude_desktop_config.example.json  package-lock.json  package.json  tsconfig.json
programs/tavsin/: Cargo.toml
programs/tavsin/src/: constants.rs  error.rs  lib.rs
programs/tavsin/src/instructions/: approve_request.rs  close_audit_entry.rs  close_request.rs  create_wallet.rs  execute.rs  execute_request.rs  freeze_wallet.rs  fund_wallet.rs  mod.rs  panic_drain.rs  reject_request.rs  rotate_agent.rs  shared.rs  submit_request.rs  unfreeze_wallet.rs  update_policy.rs  upsert_counterparty_policy.rs  withdraw.rs
programs/tavsin/src/state/: mod.rs
scripts/: agent-bot.ts  deploy-mainnet.sh  jupiter-swap.ts  kill-switch.ts  validate-reads.ts  x402-mcp-demo.ts
sdk/: README.md  package.json  tsconfig.json
tests/: helpers.ts  tavsin-owner-controls.ts  tavsin-policy.ts  tavsin-requests.ts  tavsin-security.ts  tavsin-spl.ts  tavsin.ts
(+78 files in other folders)
