[package]
name = "tavsin"
version = "0.1.0"
description = "Policy-enforced smart wallet for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tavsin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
